.altercões no footer

--- a/public/assets/css/cadastro.css
+++ b/public/assets/css/cadastro.css
@@ -146,7 +146,6 @@ button:hover {
 
 .footer {
     text-align: center;
-    padding: 20px;
     background-color: #f8f9fa;
     position: fixed;
     bottom: 0;
@@ -157,6 +156,12 @@ button:hover {
 
 .footer-link {
     color: #8a2be2;
+}
+
+.footer-link img {
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
 }
 
 .footer-link a {
@@ -176,10 +181,9 @@ button:hover {
     border-radius: 30px;
     font-weight: bold;
     text-decoration: none;
-    /* transition: all 0.3s ease; */
     position: fixed;
     right: 8px;
-    bottom: 40px;
+    bottom: 20px;
 }
 
 .btn-footer:hover {
