--- a/public/assets/css/listar.css
+++ b/public/assets/css/listar.css
@@ -103,7 +103,7 @@ tr:hover {
 
 .footer {
     text-align: center;
-    padding: 20px;
+    /* padding: 20px; */
     background-color: #f8f9fa;
     position: fixed;
     bottom: 0;
@@ -114,6 +114,12 @@ tr:hover {
 
 .footer-link {
     color: #8a2be2;
+}
+
+.footer-link img {
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
 }
 
 .footer-link a {
@@ -133,10 +139,9 @@ tr:hover {
     border-radius: 30px;
     font-weight: bold;
     text-decoration: none;
-    /* transition: all 0.3s ease; */
     position: fixed;
     right: 8px;
-    bottom: 40px;
+    bottom: 20px;
     font-size: x-large;
 }
 
