--- a/public/assets/css/cadastro.css
+++ b/public/assets/css/cadastro.css
@@ -150,12 +150,16 @@ button:hover {
     position: fixed;
     bottom: 0;
     width: 100%;
-    border: 1px solid #9370db;
-    border-radius: 40px 40px 0px 0px;
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
 }
 
 .footer-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #8a2be2;
+    font-size: x-large;
+    font-weight: bolder;
 }
 
 .footer-link img {
@@ -165,13 +169,10 @@ button:hover {
 }
 
 .footer-link a {
-    color: #9370db;
+    color: #8a2be2;
     text-decoration: none;
-    font-weight: bold;
-}
-
-.footer-link a:hover {
-    text-decoration: underline;
+    display: flex;
+    align-items: center;
 }
 
 .btn-footer {
