--- a/public/assets/css/listar.css
+++ b/public/assets/css/listar.css
@@ -103,17 +103,20 @@ tr:hover {
 
 .footer {
     text-align: center;
-    /* padding: 20px; */
     background-color: #f8f9fa;
     position: fixed;
     bottom: 0;
     width: 100%;
-    border: 1px solid #9370db;
-    border-radius: 40px 40px 0px 0px;
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
 }
 
 .footer-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #8a2be2;
+    font-size: x-large;
+    font-weight:bolder;
 }
 
 .footer-link img {
@@ -123,9 +126,10 @@ tr:hover {
 }
 
 .footer-link a {
-    color: #9370db;
+    color: #8a2be2;
     text-decoration: none;
-    font-weight: bold;
+    display: flex;
+    align-items: center;
 }
 
 .footer-link a:hover {
